[package]
name = "ethers-flashbots"
version = "0.8.1"
authors = ["Oliver Nordbjerg <hi@notbjerg.me>"]
license = "MIT"
edition = "2018"
readme = "./README.md"
documentation = "https://docs.rs/ethers-flashbots"
repository = "https://github.com/onbjerg/ethers-flashbots"
homepage = "https://github.com/onbjerg/ethers-flashbots"
description = """
Flashbots middleware for ethers-rs
"""

[dependencies]
# Error handling
thiserror = { version = "1.0.30", default-features = false }

# Serialization/deserialization
serde = "1.0.136"
serde_json = "1.0.79"
chrono = { version = "0.4.19", features = ["default", "serde"] }

# HTTP
url = { version = "2.2.2", default-features = false }
reqwest = "0.11.10"

# Async
async-trait = { version = "0.1.53", default-features = false }
futures-util = "0.3.21"
futures-core = "0.3.21"
pin-project = "1.0.10"

# Ethers
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
ethers = {version = "^0.6.0", default-features = false }
anyhow = "1.0"
